--- a/index.html
+++ b/index.html
@@ -2,11 +2,26 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title> My test page</title>
+        <title>Google</title>
 
     </head>
     <body>
         <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="my test image">
-        
+        <p> 
+            <a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">about</a>
+            <a href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">store</a>
+            <a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F%3Ftab%3Dwm%26ogbl&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">Gmail</a>
+            <a href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">images</a>
+            <a href="https://accounts.google.com/ServiceLogin/signinchooser?hl=en&passive=true&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifWebSignIn&flowEntry=ServiceLogin">Sign In</a>
+            <a href="https://ads.google.com/intl/en_us/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a>
+            <a href="https://smallbusiness.withgoogle.com/?subid=us-en-et-g-aw-a-g4sb_test_2a!o2&gmbsrc=us-en_US-et-z-z-gmb-s-z-r~sb-g4sb_test_2a-u&utm_content=g4sb_test_2a&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1&utm_expid=.1tzV7EbIReimh-7EIKk4yw.2&utm_referrer=https%3A%2F%2Fwww.google.com%2F#!/#%3Fmodal_active=none">Business</a>
+            <a href="https://www.google.com/search/howsearchworks/?fg=1">how search works</a>
+            <a href="https://policies.google.com/privacy?fg=1">privacy</a>
+            <a href="https://policies.google.com/terms?fg=1">Terms</a>
+            <a href="https://www.google.com/preferences?hl=en&fg=1">settings</a>
+
+
+            
+        </p>
     </body>
 </html>
