--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Google</title>
-
+        <link href="styles/style.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+        
     </head>
     <body>
         <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="my test image">
@@ -21,7 +23,7 @@
             <a href="https://www.google.com/preferences?hl=en&fg=1">settings</a>
 
 
-            
+
         </p>
     </body>
 </html>
