--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <ul>
             <li><a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a></li>
             <li><a href="https://store.google.com/US?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a></li>
-            <li><a href="https://mail.google.com/mail/?tab=wm&ogbl">Mail</a></li>
-            <li><a href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Image</a></li>
+            <li style="float: right;"><a class="active" href="https://mail.google.com/mail/?tab=wm&ogbl">Gmail</a></li>
+            <li style="float: right;"><a class="active" href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Image</a></li>
             <li><a href="https://www.google.com/intl/en_us/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a></li>
             <li><a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Business</a></li>
             <li><a href="https://google.com/search/howsearchworks/?fg=1">How Search Works</a></li>
