--- a/index.html
+++ b/index.html
@@ -15,16 +15,25 @@
             <li style="float: right;"><a class="active" href="https://mail.google.com/mail/?tab=wm&ogbl">Gmail</a></li>
             <li style="float: right;"><a class="active" href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Image</a></li>
  </ul>   
-        <div >
+    </body>
+   
+   
+    <body>
+       <div class="Bottom">
+            <ul>
+                <li><a href="https://www.google.com/intl/en_us/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a></li>
+                <li><a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Business</a></li>
+                <li><a href="https://google.com/search/howsearchworks/?fg=1">how search works</a></li>
+                <li><a href="https://policies.google.com/privacy?fg=1">Privacy</a></li>
+                <li><a href="https://policies.google.com/terms?fg=1">Terms</a></li>
+                <li><a href="https://www.google.com/preferences?hl=en">Settings</a></li>
+             </ul>
 
 
         </div>  
-     </body>
     
-
-
-
-
+    </body>
+    
 </html>
 
 
