--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
             <li style="float: right;"><a class="active" href="https://mail.google.com/mail/?tab=wm&ogbl">Gmail</a></li>
             <li style="float: right;"><a class="active" href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Image</a></li>
  </ul>   
-    </body>
-   
-   
-    <body>
-       <div class="Bottom">
+        <div>
             <ul>
                 <li><a href="https://www.google.com/intl/en_us/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a></li>
                 <li><a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Business</a></li>
